--- a/view/loginView.mustache
+++ b/view/loginView.mustache
@@ -1,5 +1,5 @@
 <main class="flex-grow-1 d-flex align-items-center justify-content-center">
-    <div class="login-container shadow p-4 bg-light rounded">
+    <div class="login-container shadow p-4 rounded">
         <h2 class="text-center mb-4">Iniciar Sesión</h2>
         <form method="POST" action="/usuario/auth">
             <div class="mb-3">
