Cambio de nombre del controlador y modelo login a usuario y correccion de errores

--- a/view/header.mustache
+++ b/view/header.mustache
@@ -16,10 +16,10 @@
 <header class="header-gradient">
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
-            <div class="d-flex align-items-center w-100"> <!-- Usar d-flex y align-items-center para alinear verticalmente -->
+            <div class="d-flex align-items-center w-100">
             <!-- Logo -->
             <a class="navbar-brand" href="#">
-                <img src="ruta_a_tu_logo.png" alt="Logo" height="40"> <!-- Ajusta la altura del logo si es necesario -->
+                <img src="ruta_a_tu_logo.png" alt="Logo" height="40">
             </a>
             <!-- Botón para el menú en móvil -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
