Se agrego la vista de perfil de usuario

--- a/view/header.mustache
+++ b/view/header.mustache
@@ -18,7 +18,7 @@
         <div class="container-fluid">
             <div class="d-flex align-items-center w-100">
             <!-- Logo -->
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/usuario/home">
                 <img src="ruta_a_tu_logo.png" alt="Logo" height="40">
             </a>
             <!-- Botón para el menú en móvil -->
@@ -41,7 +41,7 @@
                     </li>
                     {{#logged_in}}
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Perfil</a>
+                            <a class="nav-link" href="/usuario/search">Perfil</a>
                         </li>
                     {{/logged_in}}
                 </ul>
