mejorado el ccs de registro

--- a/view/loginView.mustache
+++ b/view/loginView.mustache
@@ -19,6 +19,11 @@
                     {{error}}
                 </div>
             {{/error}}
+            {{#succes}}
+                <div class="alert alert-success" role="alert">
+                    {{succes}}
+                </div>
+            {{/succes}}
         </form>
     </div>
 </main>
