--- a/public/style.css
+++ b/public/style.css
@@ -16,6 +16,20 @@
     backdrop-filter: blur(10px);
 }
 
+.form-container {
+    background-color: rgba(255, 255, 255, 0.7);
+    padding: 2rem;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 80%;
+    margin: auto;
+}
+
+.btn-center {
+    display: flex;
+    justify-content: center;
+}
+
 .header-gradient {
     background: linear-gradient(to bottom, black, transparent);
     padding: 0 0 20px;
@@ -52,6 +66,5 @@ body{
 }
 
 #map {
-    height: 300px;
-    width: 100%;
+    height: 500px;
 }
