--- a/view/header.mustache
+++ b/view/header.mustache
@@ -20,8 +20,9 @@
         <div class="container-fluid">
             <div class="d-flex align-items-center w-100">
             <!-- Logo -->
-            <a class="navbar-brand" href="/usuario/home">
-                <img src="ruta_a_tu_logo.png" alt="Logo" height="40">
+            <a class="navbar-brand d-flex align-items-center ms-auto" href="/usuario/home">
+                <img src="/public/logo/question.png" alt="Logo" height="40">
+                <span class="ms-3">PreguntadosJR</span>
             </a>
             <!-- Botón para el menú en móvil -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -54,7 +55,7 @@
                     {{#logged_in}}
                         <span class="me-2">
                         {{#usuario}}
-                        <img src="{{foto_perfil}}" alt="Usuario" width="30" height="30">
+                        <a> <img src="{{foto_perfil}}" alt="Usuario" width="30" height="30"></a>
                         {{/usuario}}
                     </span>
                         <span class="me-3 text-light">{{user}}</span> <!-- Nombre de usuario -->
