--- a/view/header.mustache
+++ b/view/header.mustache
@@ -4,15 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Login</title>
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="/public/style.css" rel="stylesheet">
 </head>
-
 <body class="d-flex flex-column min-vh-100">
-
-<!-- Header -->
 <header class="header-gradient">
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
@@ -26,7 +22,6 @@
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
             <!-- Opciones del Nav -->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-3">
@@ -46,17 +41,15 @@
                     {{/logged_in}}
                 </ul>
             </div>
-
                 <!-- Bloque para el icono de usuario y nombre -->
-                <div class="d-flex align-items-center ms-auto"> <!-- Alinear verticalmente -->
+                <div class="d-flex align-items-center ms-auto">
                     {{#logged_in}}
                         <span class="me-2">
                         <img src="ruta_a_icono_usuario.png" alt="Usuario" width="30" height="30">
                     </span>
-                        <span class="me-3 text-light">{{user}}</span> <!-- Nombre de usuario -->
+                        <span class="me-3 text-light">{{user}}</span>
                     {{/logged_in}}
                 </div>
-
                 <!-- Botón de cerrar sesión -->
                 <div class="d-flex align-items-center">
                     {{#logged_in}}
@@ -67,7 +60,3 @@
         </div>
     </nav>
 </header>
-
-
-
-
