se suben imagenes

--- a/view/registroView.mustache
+++ b/view/registroView.mustache
@@ -25,7 +25,9 @@
     <input type="email" id="mail" name="mail" required><br>
 
     <label for="foto_perfil">Foto de perfil:</label>
-    <!--<input type="file" id="foto_perfil" name="foto_perfil" accept="image/*" required><br>--!>
-    <br>
+    <input type="file" id="foto_perfil" name="foto_perfil" accept="image/jpeg, image/png, image/svg+xml" required><br>
+
     <button type="submit">Registrar</button>
 </form>
+
+
