Arreglado el alert de usuario registrado exitosamente

--- a/view/loginView.mustache
+++ b/view/loginView.mustache
@@ -19,11 +19,11 @@
                     {{error}}
                 </div>
             {{/error}}
-            {{#succes}}
+            {{#success}}
                 <div class="alert alert-success" role="alert">
-                    {{succes}}
+                    {{success}}
                 </div>
-            {{/succes}}
+            {{/success}}
         </form>
     </div>
 </main>
