--- a/view/registroView.mustache
+++ b/view/registroView.mustache
@@ -16,16 +16,17 @@
     <input type="radio" id="sexo_f" name="sexo" value="F" required> Femenino<br>
 
     <label for="pais">País:</label>
-   <!-- <input type="text" id="pais" name="pais" required><br> --!>
+    <!-- <input type="text" id="pais" name="pais" required><br> --!>
     <br>
     <label for="ciudad">Ciudad:</label>
-   <!-- <input type="text" id="ciudad" name="ciudad" required><br> --!>
+    <!-- <input type="text" id="ciudad" name="ciudad" required><br> --!>
     <br>
     <label for="mail">Correo electrónico:</label>
     <input type="email" id="mail" name="mail" required><br>
 
     <label for="foto_perfil">Foto de perfil:</label>
-    <!--<input type="file" id="foto_perfil" name="foto_perfil" accept="image/*" required><br>--!>
-    <br>
+    <input type="file" id="foto_perfil" name="foto_perfil" accept="image/jpeg, image/png, image/svg+xml" required><br>
+
     <button type="submit">Registrar</button>
 </form>
+
