hasta la segunda entrega

--- a/view/perfilUsuarioView.mustache
+++ b/view/perfilUsuarioView.mustache
@@ -2,11 +2,11 @@
     {{#usuario}}
         <div class="w3-card w3-padding w3-margin" style="max-width: 400px; margin: auto;">
             <h1>{{nombre_completo}}</h1>
-            <p><strong>Año:</strong> {{año_nacimiento}}</p>
+            <p><strong>Año:</strong> {{anio_nacimiento}}</p>
             <p><strong>Sexo:</strong> {{sexo}}</p>
             <p><strong>País:</strong> {{pais}}</p>
             <p><strong>Ciudad:</strong> {{ciudad}}</p>
-            <img src="{{image}}" alt="Foto de perfil" class="w3-image" style="width: 100%; max-width: 200px; border-radius: 50%;">
+            <img src="{{foto_perfil}}" alt="Foto de perfil" class="w3-image" style="width: 100%; max-width: 200px; border-radius: 50%;">
         </div>
     {{/usuario}}
     {{^usuario}}
