aase agregaron cosas faltantes

--- a/view/perfilUsuarioView.mustache
+++ b/view/perfilUsuarioView.mustache
@@ -6,7 +6,7 @@
             <p><strong>Sexo:</strong> {{sexo}}</p>
             <p><strong>País:</strong> {{pais}}</p>
             <p><strong>Ciudad:</strong> {{ciudad}}</p>
-            <img src="{{foto_perfil}}" alt="Foto de perfil" class="w3-image" style="width: 100%; max-width: 200px; border-radius: 50%;">
+            <img src="{{foto_perfil}}" alt="Foto de perfil" class="w3-image" style="width: 100%; max-width: 200px;">
         </div>
     {{/usuario}}
     {{^usuario}}
