--- a/view/registrarView.mustache
+++ b/view/registrarView.mustache
@@ -2,7 +2,7 @@
 <div class="container my-5 ">
     <div class="form-container">
         <h2 class="text-center mb-4">Formulario de Registro</h2>
-    <form action="/usuario/procesarRegistro" method="POST" enctype="multipart/form-data">
+    <form action="/usuario/procesarRegistro" method="POST" enctype="multipart/form-data" onsubmit="return validatePasswords();">
 
         <div class="mb-3">
             <label for="username" class="form-label">Nombre de Usuario</label>
@@ -12,6 +12,12 @@
         <div class="mb-3">
             <label for="password" class="form-label">Contraseña</label>
             <input type="password" class="form-control" id="password" name="password" required>
+        </div>
+
+        <div class="mb-3">
+            <label for="password" class="form-label">Repetir Contraseña</label>
+            <input type="password" class="form-control" id="confirm_password" name="confirm_password" required>
+            <div id="passwordError" class="text-danger mt-2" style="display:none;">Las contraseñas no coinciden.</div>
         </div>
 
         <div class="mb-3">
