ya se guarda el historial de partidas con puntaje

--- a/view/partidaNuevaView.mustache
+++ b/view/partidaNuevaView.mustache
@@ -39,7 +39,7 @@
                     <h3>Felicidades acertaste +1 punto</h3>
                     <div class="mt-4 text-center">
                         <button type="button" class="btn btn-danger">Reportar</button>
-                        <button type="button" class="btn btn-success me-3" onclick="window.location.href='../partida/nueva'">Siguiente pregunta</button>
+                        <button type="button" class="btn btn-success me-3" onclick="window.location.href='../partida/traerPregunta'">Siguiente pregunta</button>
                     </div>
                 {{/correcta}}
                 {{^correcta}}
