--- a/view/partidaNuevaView.mustache
+++ b/view/partidaNuevaView.mustache
@@ -1,29 +1,21 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Login</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="/public/style.css" rel="stylesheet">
-</head>
-
-<body class="d-flex flex-column min-vh-100">
-
 <main class="flex-grow-1 d-flex align-items-center justify-content-center">
-<div class="dashboard-container shadow p-4 bg-light rounded">
-    <div class="question-container">
-        <h2 class="question">{{#pregunta}}{{pregunta}}</h2>
+    <div class="dashboard-container shadow p-4 bg-light rounded" style="background-image: linear-gradient({{color}}, white);">
+        <div class="question-container text-center">
+            {{#pregunta}}
+                <div class="mb-2">
+                    <img src="../public/categorias/{{categoria}}.png" alt="{{categoria}}" width="70" height="70">
+                </div>
+            <h2 class="mb-4">{{pregunta}}</h2>
             <form action="../partida/validarRespuesta" method="POST">
-                <div class="row">
+                <div class="row mb-4">
                     <div class="col-6">
                         <button type="submit" name="opcion" class="btn btn-primary w-100 mb-2" value="1" {{#respuestaDada}}disabled{{/respuestaDada}}>{{opcion_1}}</button>
                     </div>
                     <div class="col-6">
                         <button type="submit" name="opcion" class="btn btn-primary w-100 mb-2" value="2" {{#respuestaDada}}disabled{{/respuestaDada}}>{{opcion_2}}</button>
                     </div>
+                </div>
+                <div class="row">
                     <div class="col-6">
                         <button type="submit" name="opcion" class="btn btn-primary w-100 mb-2" value="3" {{#respuestaDada}}disabled{{/respuestaDada}}>{{opcion_3}}</button>
                     </div>
@@ -32,30 +24,48 @@
                     </div>
                 </div>
             </form>
-    {{/pregunta}}
+            {{/pregunta}}
 
             {{#respuestaDada}}
-                {{#correcta}}
-                    <h3>Felicidades acertaste +1 punto</h3>
-                    <h3>Tu puntaje es {{puntaje}}</h3>
-                    <div class="mt-4 text-center">
-                        <button type="button" class="btn btn-danger">Reportar</button>
-                        <button type="button" class="btn btn-success me-3" onclick="window.location.href='../partida/traerPregunta'">Siguiente pregunta</button>
-                    </div>
-                {{/correcta}}
-                {{^correcta}}
-                    <h3>Una lastima pa volve a intentar</h3>
-                    <h3>Tu puntaje final es {{puntaje}}</h3>
-                    <div class="mt-4 text-center">
-                        <button type="button" class="btn btn-danger">Reportar</button>
-                        <button type="button" class="btn btn-success me-3" onclick="window.location.href='../usuario/home'">Al home</button>
-                    </div>
-                {{/correcta}}
+                <div class="result-container mt-4">
+                    {{#correcta}}
+                        <div class="alert alert-success" role="alert">
+                            ¡Felicidades, acertaste!
+                        </div>
+                        <div class="alert alert-info" role="alert">
+                            +1 Punto
+                        </div>
+                        <div class="mt-4">
+                            <div class="row">
+                                <div class="col-6 mb-2">
+                                    <button type="button" class="btn btn-danger w-100" onclick="reportar()">Reportar</button>
+                                </div>
+                                <div class="col-6 mb-2">
+                                    <button type="button" class="btn btn-success w-100" onclick="window.location.href='../partida/traerPregunta'">Siguiente pregunta</button>
+                                </div>
+                            </div>
+                        </div>
+                    {{/correcta}}
+                    {{^correcta}}
+                        <div class="alert alert-danger" role="alert">
+                            Perdiste, intenta de nuevo
+                        </div>
+                        <div class="alert alert-info" role="alert">
+                            Tu puntaje final es: {{puntaje}}
+                        </div>
+                        <div class="mt-4">
+                            <div class="row">
+                                <div class="col-6 mb-2">
+                                    <button type="button" class="btn btn-danger w-100" onclick="reportar()">Reportar</button>
+                                </div>
+                                <div class="col-6 mb-2">
+                                    <button type="button" class="btn btn-success w-100" onclick="window.location.href='../usuario/home'">Al home</button>
+                                </div>
+                            </div>
+                        </div>
+                    {{/correcta}}
+                </div>
             {{/respuestaDada}}
-
-
-
+        </div>
     </div>
-
-</div>
 </main>
