--- a/view/partidaNuevaView.mustache
+++ b/view/partidaNuevaView.mustache
@@ -1,7 +1,7 @@
 <main class="flex-grow-1 d-flex align-items-center justify-content-center">
     <div class="dashboard-container shadow p-4 bg-light rounded" style="background-image: linear-gradient({{color}}, white);">
+        {{#pregunta}}
         <div class="question-container text-center">
-            {{#pregunta}}
                 <div class="mb-2">
                     <img src="../public/categorias/{{categoria}}.png" alt="{{categoria}}" width="70" height="70">
                 </div>
@@ -23,6 +23,7 @@
                         <button type="submit" name="opcion" class="btn btn-primary w-100 mb-2" value="4" {{#respuestaDada}}disabled{{/respuestaDada}}>{{opcion_4}}</button>
                     </div>
                 </div>
+                <button type="submit" id="hiddenSubmit" name="opcion" value="5" style="display: none;"></button>
             </form>
             {{/pregunta}}
 
@@ -67,5 +68,43 @@
                 </div>
             {{/respuestaDada}}
         </div>
+        {{^respuestaDada}}
+            <div class="progress mt-3">
+                <div id="progress-bar" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+        {{/respuestaDada}}
     </div>
 </main>
+
+<!-- Cuenta regresiva -->
+<script>
+    const progressBar = document.getElementById('progress-bar');
+    const hiddenSubmit = document.getElementById('hiddenSubmit');
+
+    const totalTime = 15;
+    let timeLeft = totalTime;
+
+    progressBar.style.width = '100%';
+
+    const countdown = setInterval(() => {
+        timeLeft--;
+
+        const progressPercentage = (timeLeft / totalTime) * 100;
+        progressBar.style.width = `${progressPercentage}%`;
+
+        if (timeLeft <= 5) {
+            progressBar.classList.remove('bg-success', 'bg-info');
+            progressBar.classList.add('bg-warning');
+        }
+        if (timeLeft <= 3) {
+            progressBar.classList.remove('bg-warning');
+            progressBar.classList.add('bg-danger');
+        }
+
+        if (timeLeft <= 0) {
+            clearInterval(countdown);
+            progressBar.style.width = '0%';
+            hiddenSubmit.click();
+        }
+    }, 1000);
+</script>
