Agregado mapa a vista perfil, arreglado problema de que se podia omitir el mapa en el registro y se modifico el uso de JavaScript en general

--- a/view/partidaNuevaView.mustache
+++ b/view/partidaNuevaView.mustache
@@ -76,35 +76,4 @@
     </div>
 </main>
 
-<!-- Cuenta regresiva -->
-<script>
-    const progressBar = document.getElementById('progress-bar');
-    const hiddenSubmit = document.getElementById('hiddenSubmit');
-
-    const totalTime = 15;
-    let timeLeft = totalTime;
-
-    progressBar.style.width = '100%';
-
-    const countdown = setInterval(() => {
-        timeLeft--;
-
-        const progressPercentage = (timeLeft / totalTime) * 100;
-        progressBar.style.width = `${progressPercentage}%`;
-
-        if (timeLeft <= 5) {
-            progressBar.classList.remove('bg-success', 'bg-info');
-            progressBar.classList.add('bg-warning');
-        }
-        if (timeLeft <= 3) {
-            progressBar.classList.remove('bg-warning');
-            progressBar.classList.add('bg-danger');
-        }
-
-        if (timeLeft <= 0) {
-            clearInterval(countdown);
-            progressBar.style.width = '0%';
-            hiddenSubmit.click();
-        }
-    }, 1000);
-</script>
+<script src="../public/js/cuentaRegresiva.js"></script>
