--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,7 +52,7 @@ footer {
 }
 
 body{
-    background: url("5134336.jpg");
+    background: url("../backgrounds/5134336.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
