--- a/view/registrarView.mustache
+++ b/view/registrarView.mustache
@@ -1,8 +1,8 @@
-<body>
+
 <div class="container my-5 ">
     <div class="form-container">
         <h2 class="text-center mb-4">Formulario de Registro</h2>
-    <form action="/usuario/procesarRegistro" method="POST" enctype="multipart/form-data" onsubmit="return validatePasswords();">
+    <form action="/usuario/procesarRegistro" method="POST" enctype="multipart/form-data" onsubmit="return validateForm();">
 
         <div class="mb-3">
             <label for="username" class="form-label">Nombre de Usuario</label>
@@ -49,18 +49,18 @@
         <div class="mb-3">
             <label class="form-label">Selecciona tu País y Ciudad</label>
             <div id="map"></div>
-            <input type="hidden" id="country" name="country">
-            <input type="hidden" id="city" name="city">
+            <input type="hidden" id="country" name="country" required>
+            <input type="hidden" id="city" name="city" required>
         </div>
 
         <div class="mb-3">
             <label for="selectedCountry" class="form-label">País</label>
-            <input type="text" class="form-control" id="selectedCountry" readonly>
+            <input type="text" class="form-control" id="selectedCountry" readonly required>
         </div>
 
         <div class="mb-3">
             <label for="selectedProvince" class="form-label">Ciudad</label>
-            <input type="text" class="form-control" id="selectedCity" readonly>
+            <input type="text" class="form-control" id="selectedCity" readonly required>
         </div>
 
         <div class="mb-3">
@@ -74,3 +74,7 @@
     </form>
 </div>
 </div>
+<!-- Leaflet.js -->
+<script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
+<script src="../public/js/mapaRegistro.js"></script>
+<script src="../public/js/validaciones.js"></script>
