se agrego la vista y funcionalidades de ranking, tambien se actualizo el script sql

--- a/view/header.mustache
+++ b/view/header.mustache
@@ -50,7 +50,11 @@
                         <span class="me-2">
                         <a> <img src="{{foto_perfil}}" alt="Usuario" width="30" height="30"></a>
                     </span>
-                        <span class="me-3 text-light">{{user}}</span>
+                        <span class="me-3 text-light">{{user}}
+                        <span class="me-2 ms-2">
+                           <a> <img src="../public/icons/cup.png" alt="Ranking" width="30" height="30"></a>
+                        </span>
+                        <span class="me-3 text-light">Mejor puntaje: {{miRanking}}</span>
                     {{/logged_in}}
                 </div>
                 <!-- Botón de cerrar sesión -->
