--- a/public/css/style.css
+++ b/public/css/style.css
@@ -65,6 +65,15 @@ body{
     max-width: 400px;
 }
 
+.table-container {
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    width: 50%;
+    margin: auto;
+
+}
+
 #map {
     height: 500px;
 }
