--- a/view/homeView.mustache
+++ b/view/homeView.mustache
@@ -18,7 +18,8 @@
     <div class="d-grid gap-3">
         <button type="button" class="btn btn-danger" onclick="window.location.href='/usuario/search'">Ver perfil</button>
         <button type="button" class="btn btn-primary" onclick="window.location.href='/partida/nueva'">Empezar nueva partida</button>
-        <button type="button" class="btn btn-success" onclick="window.location.href='ranking.php'">Ver ranking de usuarios</button>
+        <button type="button" class="btn btn-success" onclick="window.location.href='/partida/ranking'">Ver ranking de usuarios</button>
+        <button type="button" class="btn btn-warning" onclick="window.location.href='historial_partidas.php'">Ver historial de partidas</button>
     </div>
 </div>
 </main>
