--- a/view/header.mustache
+++ b/view/header.mustache
@@ -45,7 +45,7 @@
                 </ul>
             </div>
                 <!-- Bloque para el icono de usuario y nombre -->
-                <div class="d-flex align-items-center ms-auto">
+                <!--<div class="d-flex align-items-center ms-auto">
                     {{#logged_in}}
                         <span class="me-2">
                         <a> <img src="{{foto_perfil}}" alt="Usuario" width="30" height="30"></a>
@@ -56,7 +56,7 @@
                         </span>
                         <span class="me-3 text-light">Mejor puntaje: {{miRanking}}</span>
                     {{/logged_in}}
-                </div>
+                </div>-->
                 <!-- Botón de cerrar sesión -->
                 <div class="d-flex align-items-center">
                     {{#logged_in}}
