--- a/view/homeView.mustache
+++ b/view/homeView.mustache
@@ -1,20 +1,14 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Login</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="../public/css/style.css" rel="stylesheet">
-</head>
-
-<body class="d-flex flex-column min-vh-100">
-
 <main class="flex-grow-1 d-flex align-items-center justify-content-center">
 <div class="dashboard-container shadow p-4 bg-light rounded">
-    <h2 class="text-center mb-4">Bienvenido</h2>
+    {{#usuario}}
+    <h2 class="text-center mb-4">Bienvenido {{nombre_usuario}} <img src="{{foto_perfil}}" alt="Usuario" width="40" height="40"></h2>
+    <div class="d-flex align-items-center justify-content-center ms-auto mb-4">
+        <span class="me-2 ms-2">
+            <a><img src="../public/icons/cup.png" alt="Ranking" width="30" height="30"></a>
+        </span>
+        <span class="me-3">Tu mejor puntaje fue: {{userRanking}}</span>
+    </div>
+    {{/usuario}}
     <div class="d-grid gap-3">
         <button type="button" class="btn btn-danger" onclick="window.location.href='/usuario/search'">Ver perfil</button>
         <button type="button" class="btn btn-primary" onclick="window.location.href='/partida/nueva'">Empezar nueva partida</button>
