--- a/view/registrarView.mustache
+++ b/view/registrarView.mustache
@@ -4,10 +4,14 @@
         <h2 class="text-center mb-4">Formulario de Registro</h2>
     <form action="/usuario/procesarRegistro" method="POST" enctype="multipart/form-data" onsubmit="return validateForm();">
 
+        <!-- Nombre de usuario con AJAX -->
         <div class="mb-3">
             <label for="username" class="form-label">Nombre de Usuario</label>
-            <input type="text" class="form-control" id="username" name="username" required>
+            <input type="text" class="form-control" id="username" name="username" required oninput="checkUsername();">
+            <div id="usernameError" class="text-danger mt-2" style="display:none;">Este nombre de usuario ya está en uso.</div>
         </div>
+
+
 
         <div class="mb-3">
             <label for="password" class="form-label">Contraseña</label>
@@ -68,7 +72,7 @@
             <input type="file" class="form-control" id="image" name="image" required>
         </div>
         <div class="btn-center">
-            <button type="submit" class="btn btn-primary w-25 mx-2">Registrarse</button>
+            <button type="submit" class="btn btn-primary w-25 mx-2  ">Registrarse</button>
             <button type="button" class="btn btn-secondary w-25 mx-2" onclick="window.location.href='/usuario/login'">Volver</button>
         </div>
     </form>
@@ -78,3 +82,4 @@
 <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
 <script src="../public/js/mapaRegistro.js"></script>
 <script src="../public/js/validaciones.js"></script>
+<script src="../public/js/validarUsername.js"></script>
