ranking trae los usuarios con partidas

--- a/view/rankingView.mustache
+++ b/view/rankingView.mustache
@@ -8,7 +8,7 @@
         <tr>
             <th>Ranking</th>
             <th>Usuario</th>
-            <th>Puntuacion máxima</th>
+            <th>Puntuación máxima</th>
         </tr>
         </thead>
         <tbody>
