--- a/view/partidaNuevaView.mustache
+++ b/view/partidaNuevaView.mustache
@@ -35,7 +35,7 @@
                         ¡Felicidades, acertaste!
                     </div>
                     <div class="alert alert-info" role="alert">
-                        +1 Punto
+                        +1 Punto - Tu puntaje: {{puntaje}}
                     </div>
                     <div class="mt-4">
                         <div class="row">
