--- a/view/rankingView.mustache
+++ b/view/rankingView.mustache
@@ -15,7 +15,7 @@
         {{#rankings}}
             <tr>
                 <td><p>{{ranking}}</p></td>
-                <td><p>{{nombre_usuario}}</p></td>
+                <td><p> <a href="/perfil/{{nombre_usuario}}">{{nombre_usuario}}</a></p></td>
                 <td><p>{{resultado}}</p></td>
             </tr>
         {{/rankings}}
