--- a/view/informesView.mustache
+++ b/view/informesView.mustache
@@ -1,53 +1,85 @@
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <main class="flex-grow-1 d-flex align-items-center justify-content-around">
     <div class="dashboard-container shadow p-4 bg-light rounded">
         <h2 class="text-center mb-4">Seleccione una opción</h2>
         <div class="d-grid gap-3">
-        <button type="button" class="btn btn-info" onclick="window.location.href='/admin/cantidadJugadores'">Ver cantidad de jugadores</button>
-        <button type="button" class="btn btn-info" onclick="window.location.href='/admin/cantidadPartidasJugadas'">Ver cantidad de partidas jugadas</button>
-        <button type="button" class="btn btn-info" onclick="window.location.href='/admin/informes'">Ver cantidad de preguntas creadas (Proximamente)</button>
-        <button type="button" class="btn btn-info" onclick="window.location.href='/admin/cantidadUsuariosNuevos'">Ver cantidad de usuarios nuevos</button>
-        <button type="button" class="btn btn-info" onclick="window.location.href='/admin/cantidadUsuariosXPais'">Ver cantidad de usuarios por país</button>
-        <button type="button" class="btn btn-info" onclick="window.location.href='/admin/cantidadUsuariosXSexo'">Ver cantidad de usuarios por sexo</button>
-        <button type="button" class="btn btn-info" onclick="window.location.href='/admin/cantidadUsuariosXGrupoEdad'">Ver cantidad de usuarios por grupo de edad</button>
-        <button type="button" class="btn btn-info" onclick="window.location.href='/admin/porcentajeDePreguntasCorrectas'">Ver porcentaje de preguntas respondidas correctamente por usuario</button>
+            <button type="button" class="btn btn-info" onclick="window.location.href='/admin/cantidadJugadores'">Ver
+                cantidad de jugadores
+            </button>
+            <button type="button" class="btn btn-info" onclick="window.location.href='/admin/cantidadPartidasJugadas'">
+                Ver cantidad de partidas jugadas
+            </button>
+            <button type="button" class="btn btn-info" onclick="window.location.href='/admin/informes'">Ver cantidad de
+                preguntas creadas (Proximamente)
+            </button>
+            <button type="button" class="btn btn-info" onclick="window.location.href='/admin/cantidadUsuariosNuevos'">
+                Ver cantidad de usuarios nuevos
+            </button>
+            <button type="button" class="btn btn-info" onclick="window.location.href='/admin/cantidadUsuariosXPais'">Ver
+                cantidad de usuarios por país
+            </button>
+            <button type="button" class="btn btn-info" onclick="window.location.href='/admin/cantidadUsuariosXSexo'">Ver
+                cantidad de usuarios por sexo
+            </button>
+            <button type="button" class="btn btn-info"
+                    onclick="window.location.href='/admin/cantidadUsuariosXGrupoEdad'">Ver cantidad de usuarios por
+                grupo de edad
+            </button>
+            <button type="button" class="btn btn-info"
+                    onclick="window.location.href='/admin/porcentajeDePreguntasCorrectas'">Ver porcentaje de preguntas
+                respondidas correctamente por usuario
+            </button>
         </div>
     </div>
     {{#cantJugadores}}
-    <div class="dashboard-container shadow p-4 bg-light rounded">
-        <h2 class="text-center mb-4">Cantidad de jugadores: {{cantJugadores}}</h2>
+        <div class="dashboard-container shadow p-4 bg-light rounded">
+            <h2 class="text-center mb-4">Cantidad de jugadores: {{cantJugadores}}</h2>
+        </div>
     {{/cantJugadores}}
     {{#cantPartidasJugadas}}
-    <div class="dashboard-container shadow p-4 bg-light rounded">
-        <h2 class="text-center mb-4">Cantidad de partidas jugadas en total: {{cantPartidasJugadas}}</h2>
+        <div class="dashboard-container shadow p-4 bg-light rounded">
+            <h2 class="text-center mb-4">Cantidad de partidas jugadas en total: {{cantPartidasJugadas}}</h2>
+        </div>
     {{/cantPartidasJugadas}}
     {{#cantUsuariosNuevos}}
-    <div class="dashboard-container shadow p-4 bg-light rounded">
-        <h2 class="text-center mb-4">Cantidad de usuarios nuevos en el ultimo mes: {{cantUsuariosNuevos}}</h2>
+        <div class="dashboard-container shadow p-4 bg-light rounded">
+            <h2 class="text-center mb-4">Cantidad de usuarios nuevos en el ultimo mes: {{cantUsuariosNuevos}}</h2>
+        </div>
     {{/cantUsuariosNuevos}}
     {{#mostrarUsuariosXPais}}
-    <div class="table-responsive shadow" style="max-height: 400px; width: 400px; overflow-y: auto;">
-        <table class="table table-striped table-hover text-center align-middle overflow-hidden table-bordered">
-            <thead class="table-secondary">
-            <tr>
-                <th>Pais</th>
-                <th>Total de Usuarios</th>
-            </tr>
-            </thead>
-            <tbody>
-            {{#cantUsuariosXPais}}
+        <div class="table-responsive shadow" style="max-height: 400px; width: 400px; overflow-y: auto;">
+            <table class="table table-striped table-hover text-center align-middle overflow-hidden table-bordered">
+                <thead class="table-secondary align-middle">
                 <tr>
-                    <td><p>{{pais}}</p></td>
-                    <td><p>{{total_usuarios}}</p></td>
+                    <th>Pais</th>
+                    <th>Total de Usuarios</th>
                 </tr>
-            {{/cantUsuariosXPais}}
-            </tbody>
-        </table>
-    </div>
+                </thead>
+                <tbody>
+                {{#cantUsuariosXPais}}
+                    <tr>
+                        <td><p>{{pais}}</p></td>
+                        <td><p>{{total_usuarios}}</p></td>
+                    </tr>
+                {{/cantUsuariosXPais}}
+                </tbody>
+            </table>
+        </div>
+
+        <div class="chart-container shadow p-4 bg-light rounded">
+            <canvas id="miGraficoTorta" width="500" height="500"
+                    data-labels='{{labels}}'
+                    data-data='{{data}}'
+                    data-chart-label='{{chartLabel}}'
+                    data-chart-text='{{chartText}}'>
+            </canvas>
+        </div>
+        <script src="../public/js/graficos.js"></script>
     {{/mostrarUsuariosXPais}}
     {{#mostrarUsuariosXSexo}}
         <div class="table-responsive shadow" style="max-height: 400px; width: 400px; overflow-y: auto;">
             <table class="table table-striped table-hover text-center align-middle overflow-hidden table-bordered">
-                <thead class="table-secondary">
+                <thead class="table-secondary align-middle">
                 <tr>
                     <th>Pais</th>
                     <th>Total de Usuarios</th>
@@ -63,11 +95,21 @@
                 </tbody>
             </table>
         </div>
+
+        <div class="chart-container shadow p-4 bg-light rounded">
+            <canvas id="miGraficoTorta" width="500" height="500"
+                    data-labels='{{labels}}'
+                    data-data='{{data}}'
+                    data-chart-label='{{chartLabel}}'
+                    data-chart-text='{{chartText}}'>
+            </canvas>
+        </div>
+        <script src="../public/js/graficos.js"></script>
     {{/mostrarUsuariosXSexo}}
     {{#mostrarUsuariosXGrupoEdad}}
         <div class="table-responsive shadow" style="max-height: 400px; width: 400px; overflow-y: auto;">
             <table class="table table-striped table-hover text-center align-middle overflow-hidden table-bordered">
-                <thead class="table-secondary">
+                <thead class="table-secondary align-middle">
                 <tr>
                     <th>Grupo de edad</th>
                     <th>Total de Usuarios</th>
@@ -83,28 +125,48 @@
                 </tbody>
             </table>
         </div>
+
+        <div class="chart-container shadow p-4 bg-light rounded">
+            <canvas id="miGraficoTorta" width="500" height="500"
+                    data-labels='{{labels}}'
+                    data-data='{{data}}'
+                    data-chart-label='{{chartLabel}}'
+                    data-chart-text='{{chartText}}'>
+            </canvas>
+        </div>
+        <script src="../public/js/graficos.js"></script>
     {{/mostrarUsuariosXGrupoEdad}}
     {{#mostrarPorcentajePreguntasCorrectas}}
         <div class="table-responsive shadow" style="max-height: 400px; width: 400px; overflow-y: auto;">
             <table class="table table-striped table-hover text-center align-middle overflow-hidden table-bordered">
-                <thead class="table-secondary">
+                <thead class="table-secondary align-middle">
                 <tr>
                     <th>Usuario</th>
+                    <th>Total respuestas correctas</th>
                     <th>Porcentaje de respuestas correctas</th>
                 </tr>
                 </thead>
                 <tbody>
                 {{#porcentajePreguntasCorrectas}}
                     <tr>
-                        <td><p>{{nombre_usuario}}</p></td>
+                        <td><p>{{usuario}}</p></td>
+                        <td><p>{{total_correctas}}</p></td>
                         <td><p>{{porcentaje_correctas}}</p></td>
                     </tr>
                 {{/porcentajePreguntasCorrectas}}
                 </tbody>
             </table>
         </div>
+        <div class="chart-container shadow p-4 bg-light rounded">
+            <canvas id="miGraficoTorta" width="500" height="500"
+                    data-labels='{{labels}}'
+                    data-data='{{data}}'
+                    data-chart-label='{{chartLabel}}'
+                    data-chart-text='{{chartText}}'>
+            </canvas>
+        </div>
+        <script src="../public/js/graficos.js"></script>
     {{/mostrarPorcentajePreguntasCorrectas}}
 
 
-    </div>
 </main>
