Se hicieron algunos arreglos

--- a/view/informesView.mustache
+++ b/view/informesView.mustache
@@ -1,4 +1,5 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<!-- HACER FUNCIONAR BIEN EL RESPONSIVE! -->
 <main class="flex-grow-1 d-flex align-items-center justify-content-around">
     <div class="dashboard-container shadow p-4 bg-light rounded">
         <h2 class="text-center mb-4">Seleccione una opción</h2>
@@ -167,6 +168,4 @@
         </div>
         <script src="../public/js/graficos.js"></script>
     {{/mostrarPorcentajePreguntasCorrectas}}
-
-
 </main>
