--- a/view/rankingView.mustache
+++ b/view/rankingView.mustache
@@ -15,7 +15,9 @@
         {{#rankings}}
             <tr>
                 <td><p>{{ranking}}</p></td>
-                <td><p> <a href="/usuario/search/{{nombre_usuario}}">{{nombre_usuario}}</a></p></td>
+                <td><form method="post" action="/usuario/search2">
+                    <button type="submit" class="btn text-primary" name="usuario" value="{{nombre_usuario}}">{{nombre_usuario}}</button>
+                </form> </td>
                 <td><p>{{resultado}}</p></td>
             </tr>
         {{/rankings}}
