se agregaron todos los filtros para los graficos y tambiens se agrego validaciones de usuario para todas las funciones

--- a/view/informesView.mustache
+++ b/view/informesView.mustache
@@ -89,7 +89,8 @@
                     data-labels='{{labels}}'
                     data-data='{{data}}'
                     data-chart-label='{{chartLabel}}'
-                    data-chart-text='{{chartText}}'>
+                    data-chart-text='{{chartText}}'
+                    data-nombre-funcion='{{nombreFuncion}}'>
             </canvas>
         </div>
         <script src="../public/js/graficos.js"></script>
@@ -130,7 +131,8 @@
                     data-labels='{{labels}}'
                     data-data='{{data}}'
                     data-chart-label='{{chartLabel}}'
-                    data-chart-text='{{chartText}}'>
+                    data-chart-text='{{chartText}}'
+                    data-nombre-funcion='{{nombreFuncion}}'>
             </canvas>
         </div>
         <script src="../public/js/graficos.js"></script>
@@ -171,7 +173,8 @@
                     data-labels='{{labels}}'
                     data-data='{{data}}'
                     data-chart-label='{{chartLabel}}'
-                    data-chart-text='{{chartText}}'>
+                    data-chart-text='{{chartText}}'
+                    data-nombre-funcion='{{nombreFuncion}}'>
             </canvas>
         </div>
         <script src="../public/js/graficos.js"></script>
@@ -214,7 +217,8 @@
                     data-data='{{data}}'
                     data-chart-label='{{chartLabel}}'
                     data-chart-text='{{chartText}}'
-                    data-mostrar-porcentajes="true">
+                    data-mostrar-porcentajes='{{mostrarPorcentaje}}'
+                    data-nombre-funcion='{{nombreFuncion}}'>
             </canvas>
         </div>
         <script src="../public/js/graficos.js"></script>
